# tiplouf

./: Cargo.toml  readme.md
src/: error.rs  global.rs  lib.rs  main.rs  playlist.rs  route.rs  schema.rs  shared.rs  track.rs  user.rs
src/database/: playlist.rs
src/playlist/: database.rs  error.rs  handler.rs  path.rs  schema.rs  scope.rs
src/playlist/database/: document.rs  manager.rs
src/playlist/database/manager/: playlist.rs  track.rs  utils.rs
src/playlist/handler/: playlist.rs  track.rs  utils.rs
src/route/: playlist.rs  utils.rs
src/route/playlist/: database.rs  error.rs  handler.rs  schema.rs  utils.rs
src/route/playlist/database/: manager.rs
src/schema/: playlist.rs
src/shared/: error.rs  middleware.rs  responder.rs  utils.rs
src/track/: database.rs  schema.rs
src/track/database/: document.rs  manager.rs
src/user/: database.rs  handler.rs  schema.rs  scope.rs
src/user/database/: document.rs  manager.rs
tests/: api_route.rs
