[package]
name = "tiplouf"
version = "0.1.0"
authors = ["Tifenn <osh.pro@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde_json = "1.0.59"
serde = "1.0.125"
actix-cors = "0.5.4"
env_logger = "0.8.3"
mongodb = "1.2.1"
futures = "0.3.15"