[package]
name = "tiplouf"
version = "0.5.0"
authors = ["Tifenn <tifenn.fl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.125"
actix-cors = "0.5.4"
env_logger = "0.8.3"
mongodb = "1.2.1"
futures = "0.3.15"
actix-files = "0.5.0"
derive_more = "0.99.16"
log = "0.4.14"
bcrypt = "0.10.1"
nanoid = "0.4.0"
# tokio = { version = "1", features = ["sync"] }
bimap = "0.6.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json", "cookies"] }
serde_json = "1.0.64"
fake = { version = "2.4", features=['derive']}
rand = "0.8"